--- a/design/design_samplesize.Rmd
+++ b/design/design_samplesize.Rmd
@@ -8,6 +8,8 @@ vignette: >
   %\VignetteEngine{knitr::rmarkdown}
 editor_options: 
   chunk_output_type: console
+  markdown: 
+    wrap: sentence
 ---
 
 ```{r setup, include=FALSE}
@@ -15,30 +17,134 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 The `mcradds` contains four methods to calculate the sample size for two different trial categories, such as quantitative and qualitative trials.
-- Test for One Proportion
-- Confidence Interval for One Proportion
-- Pearson's Correlation Tests
-- Confidence Interval for Pearson's Correlation
+
+-   Test for One Proportion
+-   Confidence Interval for One Proportion
+-   Pearson's Correlation Tests
+-   Confidence Interval for Pearson's Correlation
 
 ### Reference
 
-![NMPA Guideline](https://www.nmpa.gov.cn/xxgk/ggtg/qtggtg/20210927152837140.html?type=pc&m=)
+[NMPA Guideline](https://www.nmpa.gov.cn/xxgk/ggtg/qtggtg/20210927152837140.html?type=pc&m=)
 
 ### Test for One Proportion
 
 $$
 n=\frac{[Z_{1-α/2}\sqrt{P_0(1 - P_0)}+Z_{1-β}\sqrt{P_T(1-P_T)}]^2}{(P_T-P_0)^2}
 $$
-- n: sample size.
-- Z: Z statistics at significance and power.
-- P0: acceptable criteria.
-- PT: expected criteria.
 
+-   n: sample size.
+-   Z: Z statistics at significance and power.
+-   P0: acceptable criteria.
+-   PT: expected criteria.
 
 ### Confidence Interval for One Proportion
 
+$$
+n=\frac{[Z_{1-α/2}]^2P(1-P)}{δ^2}
+$$
 
+-   n: sample size.
+-   Z: Z statistics at significance.
+-   P: expected criteria.
+-   delta: acceptable margin.
 
+But the noted that this formula can be only used when you assume that the distribution has the simple Asymptotic, an approximately normal distribution as the sample size gets infinitely large.
 
+If we choose the Wilson-score instead of the Simple Asymptotic confidence internal, the above formula is not appropriate.
+We need to solve the equation fo Wilson-score to get the sample size N.
 
+Below formula is cited from [PASS Tests for One Proportion](https://www.ncss.com/wp-content/themes/ncss/pdf/Procedures/PASS/Tests_for_One_Proportion.pdf), a standard equation to compute the Wilson-score CI.
 
+Reference is Newcombe, R. G.
+1998.
+'Two-Sided Confidence Intervals for the Single Proportion: Comparison of Seven Methods.' Statistics in Medicine, 17, pp. 857-872.
+
+$$
+CI=\frac{(2nP+Z_{1-α/2}^2)±z_{1-α/2}\sqrt{Z_{1-α/2}^2+4nP(1-P)}}{2(n+Z_{1-α/2}^2)}
+$$ Here we use `stat::uniroot` functions to solve this formula, code as shown below.
+
+```{r}
+sampleSize <- function(n, z, p, limit){
+  t1 <- 1/2 * (2 * n * p + z^2) / (n + z^2)
+  t2 <- 1/2 * z * sqrt(z^2 + 4 * n * p * (1 - p)) / (n + z^2)
+  return(t1 - t2 - limit)
+}
+z <- qnorm(0.975)
+p <- 0.85
+limit <- 0.8
+N <- uniroot(sampleSize, c(1, 1000), tol = 1e-08, z = z, p = p, limit = limit)
+```
+
+-   limit, is defined as lower CI, also equivalent to the width when subtracted from the P.
+-   P, the expected criteria.
+-   interval, a vector containing the end-points of the interval to be searched for the root.
+-   confidence level, defaults to `0.95`.
+-   sides, defaults to `two.sided`.
+
+Or in a simple way, just to call `DescTools::BinomCI` instead of above formula.
+It can provide some useful formulas to compute CI, like Wilson, clopper-pearson, wilsoncc.
+
+### Pearson's Correlation Tests
+
+The sample size estimation uses Fisher's classic z-transformation to normalize the distribution of Pearson's correlation coefficient, and refers to Fisher (1973, p. 199).
+
+$$
+z'=\frac{1}{2}ln(\frac{1+r}{1-r})
+$$
+
+-   r: correlation coefficient.
+-   z': z-transformation of correlation coefficient.
+
+$$
+n =[\frac{Z_{1-α/2}+Z_{1-β}}{z'_{r0}-z'_{r1}}]^2 +3
+$$
+
+sample code as shown below:
+
+```{r}
+r1 <- 0.95
+r2 <- 0.9
+alpha <- 0.05
+beta <- 0.2
+z1 <- qnorm(1 - alpha/2)
+z2 <- qnorm(1 - beta)
+zr1 <- 1/2*log((1+r1)/(1-r1))
+zr2 <- 1/2*log((1+r2)/(1-r2))
+n <- ((z1 + z2)/abs(zr1 - zr2))^2 + 3
+```
+
+### Confidence Interval for Pearson's Correlation
+
+The sample size estimation also uses Fisher's classic z-transformation to normalize the distribution of Pearson's correlation coefficient, and than uses inverse transformation back to correlation, refers to Bonett and Wright (2000).
+
+$$
+z'=\frac{1}{2}ln(\frac{1+r}{1-r})
+$$
+
+$$
+(z_L,z_U)=z_r±Z_{1-α/2}\sqrt{\frac{1}{n-3}}
+$$
+
+$$
+r_L=\frac{exp(2z_L)-1}{exp(2z_L)+1}
+$$
+
+sample code as shown below:
+
+```{r}
+sizeCIcorr <- function(n, alpha, corr, lowerci) {
+  z <- qnorm(1 - alpha/2)
+  ll0 <- 1/2*log((1 + corr) / (1 - corr)) - z * sqrt(1 / (n - 3))
+  ll <- (exp(2*ll0) - 1)/(exp(2*ll0) + 1) 
+  return(ll - lowerci)
+}
+N <- uniroot(sizeCIcorr, c(20, 1000), tol = 1e-08, alpha = 0.05, corr = 0.9, lowerci = 0.85)
+str(N)
+```
+
+-   limit, is defined as lower CI, also equivalent to the width when subtracted from the r.
+-   r, the expected criteria.
+-   interval, a vector containing the end-points of the interval to be searched for the root.
+-   alpha, confidence level, defaults to `0.95`.
+-   sides, defaults to `two.sided`.
