--- a/design/design_quantitative.Rmd
+++ b/design/design_quantitative.Rmd
@@ -2,7 +2,14 @@
 title: 'Design: Quantitative Criterion'
 author: "Kai Gu"
 date: "`r Sys.Date()`"
-output: html_document
+output: rmarkdown::html_vignette
+vignette: >
+  %\VignetteEncoding{UTF-8}
+  %\VignetteEngine{knitr::rmarkdown}
+editor_options: 
+  chunk_output_type: console
+  markdown: 
+    wrap: sentence
 ---
 
 ```{r setup, include=FALSE}
