add show method for Desc class and update pkgdown documents

--- a/README.Rmd
+++ b/README.Rmd
@@ -24,6 +24,8 @@ knitr::opts_chunk$set(
 ![GitHub language count](https://img.shields.io/github/languages/count/kaigu1990/mcradds)
 [![Project Status: Active – The project has reached a stable, usable state and is being actively developed.](https://www.repostatus.org/badges/latest/active.svg)](https://www.repostatus.org/#active)
 [![Current Version](https://img.shields.io/github/r-package/v/kaigu1990/mcradds/main?color=purple\&label=package%20version)](https://github.com/kaigu1990/mcradds/tree/main)
+[![CRAN status](https://www.r-pkg.org/badges/version/mcradds)](https://cran.r-project.org/package=mcradds)
+[![](https://cranlogs.r-pkg.org/badges/grand-total/mcradds)](https://cran.r-project.org/package=mcradds)
 <!-- end badges -->
 
 The `mcradds` R package is a complement to `mcr` package, contains common and solid functions for designing, analyzing and visualization in In Vitro Diagnostic trials. Most of the methods and algorithms refer to CLSI recommendations and NMPA guidelines.
@@ -41,6 +43,7 @@ The package provides a series of typical functionality, as shown below:
 - Paired ROC/AUC test for superiority and non-inferiority trials, CLSI EP05-A3/EP15-A3.
 - Reproducibility analysis (reader precision) for immunohistochemical assays, CLSI I/LA28-A2 and NMPA guideline.
 - Evaluation of precision of quantitative measurements, CLSI EP05-A3.
+- Descriptive statistics summary.
 
 ## Installation
 
